--- a/Official Site/About.html
+++ b/Official Site/About.html
@@ -41,10 +41,8 @@
             
         </div>
         <!-- Navigation-->
-        <nav class="navbar navbar-expand-lg navbar-light fixed-top py-3" id="mainNav">
+        <nav class="navbar navbar-expand-lg navbar-light fixed-top py-4" id="mainNav">
             <div class="container px-4 px-lg-5">
-                <a class="navbar-brand" href="#about">Our Club</a>
-                <a class="navbar-brand" href="#services">Sponsors</a>
                 <button class="navbar-toggler navbar-toggler-right" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ms-auto my-2 my-lg-0">
@@ -66,7 +64,7 @@
                     </div>
                     <div class="col-lg-8 align-self-baseline">
                         <p class="text-white-75 mb-5">Rochester Institute of Technology is a private research university in the town of Henrietta in the Rochester, New York metropolitan area.</p>
-                        <a class="btn btn-primary btn-xl" href="#about">Find Out More</a>
+                        <a class="btn btn-primary btn-xl" href="#contact">Find Out More</a>
                     </div>
                 </div>
             </div>
