--- a/Official Site/index.html
+++ b/Official Site/index.html
@@ -40,8 +40,9 @@
                    <div class=" float-start"> 
                     <div class="collapse navbar-collapse" id="navbarResponsive">
                         <ul class="navbar-nav ms-auto text-light">
-                            <li class="nav-item"><a class="nav-link" href="#projects">About</a></li>
-                            <li class="nav-item"><a class="nav-link" href="#signup">Discover</a></li>
+                            <li class="nav-item"><a class="nav-link" href="./About.html">About</a></li>
+                            <li class="nav-item"><a class="nav-link" href="./Timeline.html">Timeline</a></li>
+                            <li class="nav-item"><a class="nav-link" href="./Donate.html">Donate</a></li>
                         </ul>
                     </div>
                 </div>
